displaying endpoint spec properly, added dev/prod endpoint runtimes
